<resources>
    <string name="app_name">Efun遊戲平台</string>
    <string name="efun_pd_logout">再次點擊退出!</string>
    <string name="efun_pd_reset_account_hint">點擊切換帳號</string>
    <string name="efun_pd_share_2">Share 至以下平台</string>
    <string name="efun_pd_loading">Loading</string>
    <string name="efun_pd_push_loading">正在加載ing,請稍等一會</string>
    <string name="efun_pd_recommended_games">推薦遊戲</string>
    <string name="efun_pd_recommended_games_more">顯示全部</string>
    <string name="efun_pd_games_summary">遊戲資訊</string>
    <string name="efun_pd_download_for_reward">下載送點數</string>
    <string name="efun_pd_xlistview_header_hint_normal">下拉刷新</string>
    <string name="efun_pd_xlistview_header_hint_ready">放開我,人家正在加載了喇</string>
    <string name="efun_pd_xlistview_header_hint_loading">正在愉快加載ing</string>
    <string name="efun_pd_xlistview_header_last_time">上次更新時間:</string>
    <string name="efun_pd_xlistview_footer_hint_normal">查看更多</string>
    <string name="efun_pd_xlistview_footer_hint_ready">松開載入更多</string>
    <string name="efun_pd_xlistview_time_now">剛剛</string>
    <string name="efun_pd_xlistview_time_minutes">分鐘前</string>
    <string name="efun_pd_network_error">網絡未連接,請檢查你的網絡狀況</string>
    <string name="efun_pd_request_error">請求異常了,請點擊圖片重新嘗試</string>
    <string name="efun_pd_timeout_error">請求超時了,請點擊圖片重新嘗試</string>
    <string name="efun_pd_empty_error">暫無數據,請稍後再試</string>
    <string name="efun_pd_vedio">視頻</string>
    <string name="efun_pd_game">遊戲</string>
    <string name="efun_pd_welfare">好康</string>
    <string name="efun_pd_summary">資訊</string>
    <string name="efun_pd_knock_code">序號:</string>
    <string name="efun_pd_code_center">我的序號中心</string>
    <string name="efun_pd_gift_detail">禮包詳情</string>
    <string name="efun_pd_act">活動</string>
    <string name="efun_pd_act_content">活動內容</string>
    <string name="efun_pd_news">新聞</string>
    <string name="efun_pd_summary_content">資訊內容</string>
    <string name="efun_pd_receive_awards">免費點數</string>
    <string name="efun_pd_gifts_downloads">禮包中心</string>
    <string name="efun_pd_gifts_type_fresher">新手禮包</string>
    <string name="efun_pd_gifts_type_timelimit">限免禮包</string>
    <string name="efun_pd_gifts_type_unique">專屬禮包</string>
    <string name="efun_pd_cs">客服</string>
    <string name="efun_pd_strategy">攻略</string>
    <string name="efun_pd_code">QR Code掃描</string>
    <string name="efun_pd_set">設定</string>
    <string name="efun_pd_sure">確定</string>
    <string name="efun_pd_check">查看</string>
    <string name="efun_pd_cancel">取消</string>
    <string name="efun_pd_games_intro">遊戲介紹：</string>
    <string name="efun_pd_games_commend_score">這個游戲的平均評分：</string>
    <string name="efun_pd_games_new_version">新版本介紹：</string>
    <string name="efun_pd_games_show_all">了解更多</string>
    <string name="efun_pd_games_write_commend">撰寫評論</string>
    <string name="efun_pd_games_write_commend_finish">已評論</string>
    <string name="efun_pd_games_vote_send">發送</string>
    <string name="efun_pd_games_vote_edit_title">輕按即可</string>
    <string name="efun_pd_games_vote_edit_hint">評論內容（限定200個字以內）</string>
    <string name="efun_pd_games_show_all_return">回收起</string>
    <string name="efun_pd_games_get_achieve">你獲得的遊戲成就</string>
    <string name="efun_pd_games_title_achieve">成就中心</string>
    <string name="efun_pd_i_wanna_commend">我要評論</string>
    <string name="efun_pd_download_en">Download</string>
    <string name="efun_pd_start_en">Start</string>
    <string name="efun_pd_update_en">Update</string>
    <string name="efun_pd_update_ok">好哦</string>
    <string name="efun_pd_update_cancel">不要</string>
    <string name="efun_pd_account_bind">手機號碼驗證</string>
    <string name="efun_pd_bind_account">簡訊驗證</string>
    <string name="efun_pd_account">手機號碼</string>
    <string name="efun_pd_verify_code">驗證碼　</string>
    <string name="efun_pd_finish_verify">完成驗證</string>
    <string name="efun_pd_phone_yourself_hint">您的手機號碼（僅限台灣用戶）</string>
    <string name="efun_pd_account_hint">輸入手機號碼</string>
    <string name="efun_pd_verify_code_hint">輸入驗證碼</string>
    <string name="efun_pd_verify_code_title">輸入驗證碼：</string>
    <string name="efun_pd_get_verify_code">獲取驗證碼</string>
    <string name="efun_pd_get_awards">領取獎勵</string>
    <string name="efun_pd_all_awards_has_get">點數已搶光</string>
    <string name="efun_pd_get_gift_content">禮包內容</string>
    <string name="efun_pd_get_awards_rule">規則說明</string>
    <string name="efun_pd_awards_type_title">選擇適合你的獎勵</string>
    <string name="efun_pd_commend">評論</string>
    <string name="efun_pd_share">分享</string>
    <string name="efun_pd_get_reword">領取記錄</string>
    <string name="efun_pd_start_app">啟動游戲</string>
    <string name="efun_pd_copy">複製</string>
    <string name="efun_pd_rob">立即搶</string>
    <string name="efun_pd_robed">這禮包你已擁有</string>
    <string name="efun_pd_copy_success">序號已複製</string>
    <string name="efun_pd_copy_pw">密碼已複製</string>
    <string name="efun_pd_reward_rate">中獎率</string>
    <string name="efun_pd_gift_count">禮包數量</string>
    <string name="efun_pd_hint_gift_knocked">恭喜您成功搶到一個禮包</string>
    <string name="efun_pd_egg">開心砸蛋</string>
    <string name="efun_pd_scratch">儲值刮刮樂</string>
    <string name="efun_pd_red_person">紅人館</string>
    <string name="efun_pd_member_desc">會員說明</string>
    <string name="efun_pd_vip">VIP俱樂部</string>
    <string name="efun_pd_rest">剩餘：</string>
    <string name="efun_pd_end_date">截止時間：</string>
    <string name="efun_pd_category">類型</string>
    <string name="efun_pd_description">描述</string>
    <string name="efun_pd_email">Email信箱</string>
    <string name="efun_pd_phone">聯絡電話</string>
    <string name="efun_pd_ask">我要提問</string>
    <string name="efun_pd_question">常見問題</string>
   	<string name="efun_pd_remain_gift">禮包還剩：</string>
    <string name="efun_pd_cs_ask_notify">*留下你的聯絡方式</string>
    <string name="efun_pd_submit">確定</string>
    <string name="efun_pd_save">儲存</string>
    <string name="efun_pd_edit">編輯</string>
    <string name="efun_pd_share_success">分享成功</string>
    <string name="efun_pd_share_failure">分享失敗</string>
    <string name="efun_pd_login_exception">登入異常</string>
    <string name="efun_pd_chose_game">選擇遊戲</string>
    <string name="efun_pd_chose_server">選擇伺服器</string>
    <string name="efun_pd_chose_role">選擇角色</string>
    <string name="efun_pd_cs_tip">貼心提示：沒有綁定Efun帳號的LINE用戶無法選擇遊戲角色</string>
    <string name="efun_pd_history">歷史記錄</string>
    <string name="efun_pd_your_question">我的問題</string>
    <string name="efun_pd_your_question_title">您的問題是:</string>
    <string name="efun_pd_cs_reply">客服回覆</string>
    <string name="efun_pd_cs_reply_record">回覆記錄</string>
    <string name="efun_pd_reply">回覆</string>
    <string name="efun_pd_question_title">問題</string>
    <string name="efun_pd_dimensional_url_error">鏈接地址有誤！</string>
    <string name="efun_pd_logo_start_content">台灣英旗互動娛樂有限公司</string>
    <string name="efun_pd_login_authoriza_account">是否授權使用Efun游戲平台帳號登入？</string>
    <string name="efun_pd_login_authoriza_submit">確認授權</string>
    <string name="efun_pd_login_error_timeout">您當前的登入訊息已過期，請重新登入喔</string>
    <string name="efun_pd_login_error_pwd">您當前的登入密碼進行過更新，請重新登入喔</string>
    <string name="efun_pd_person_sign_in">簽到</string>
	<string name="efun_pd_person_sign_in_desc1">已連續簽到</string>
	<string name="efun_pd_person_sign_in_desc2">天</string>
	<string name="efun_pd_person_sign_gift_get_resc">領取簽到禮包</string>
	<string name="efun_pd_has_signined">已簽到</string>
	<string name="efun_pd_get_reward">領取禮包</string>
	<string name="efun_pd_sign_tips_fist">禮包序號：</string>
    <string name="efun_pd_role_cs">客服</string>
    <string name="efun_pd_role_self">我</string>
    <string name="efun_pd_finish_question">滿意度評分</string>
    <string name="efun_pd_replay_ask_again">我要追問</string>
    <string name="efun_pd_i_ask_again">我的追問</string>
    <string name="efun_pd_your_ask_again">你的追問</string>
    <string name="efun_pd_finished">已完結</string>
    <string name="efun_pd_regist_log">註冊/登入</string>
    <string name="efun_pd_recharge_question">儲值問題</string>
    <string name="efun_pd_recharge">儲值</string>
    <string name="efun_pd_recharge_record">儲值記錄</string>
    <string name="efun_pd_recharge_rebate_offer">返利優惠</string>
    <string name="efun_pd_credit">積分</string>
    <string name="efun_pd_credit_title">積分：</string>
    <string name="efun_pd_exp">經驗</string>
    <string name="efun_pd_credit_task">積分任務</string>
    <string name="efun_pd_reward_gift">領取禮包</string>
    <string name="efun_pd_reward_gift_new_statue">NEW</string>
    <string name="efun_pd_serial_center">序號中心</string>
    <string name="efun_pd_recharge_progress">匯款（轉帳）進度</string>
    <string name="efun_pd_person_evip">VIP俱樂部</string>
    <string name="efun_pd_manager_account">帳號管理</string>
    <string name="efun_pd_special_power">特權</string>
    <string name="efun_pd_special_point">平台點：</string>
    <string name="efun_pd_person_point">平台點</string>
    <string name="efun_pd_persion_reset_password_info">設置最新的帳號密碼</string>
    <string name="efun_pd_current_password">舊密碼</string>
    <string name="efun_pd_new_password">新密碼</string>
    <string name="efun_pd_new_password_notify">密碼由6-16個字符組成,區分大小寫</string>
    <string name="efun_pd_confirm_password">確認密碼</string>
    <string name="efun_pd_reset_password">更新密碼</string>
    <string name="efun_pd_reset_per_info">更新個人資料</string>
    <string name="efun_pd_reset_per_title">個人資料</string>
    <string name="efun_pd_reset_per_safe_setting">更新安全設置</string>
    <string name="efun_pd_reset_per_bind_phone">更新綁定手機號碼</string>
    <string name="efun_pd_reset_per_bind_email">更新Email信箱地址</string>
    <string name="efun_pd_reset_account">切換帳號</string>
    <string name="efun_pd_bind_email">綁定Email信箱地址</string>
    <string name="efun_pd_reset_email_or_phone">更新Email信箱地址或手機號碼</string>
    <string name="efun_pd_reset_email">Email信箱地址更新</string>
    <string name="efun_pd_reset_old_email">原Email信箱：</string>
    <string name="efun_pd_reset_new_email">新Email信箱：</string>
    <string name="efun_pd_reset_send_veri_email">確認綁定</string>
    <string name="efun_pd_reset_send_veri_phone">發送驗證碼</string>
    <string name="efun_pd_reset_phone">綁定手機更新</string>
    <string name="efun_pd_bind_phone_title">綁定手機號碼</string>
    <string name="efun_pd_bind_email_title">綁定Email信箱地址</string>
    <string name="efun_pd_bind_phone_choice_area">請選擇地區</string>
    <string name="efun_pd_reset_old_phone">原手機號碼：</string>
    <string name="efun_pd_reset_new_phone">新手機號碼：</string>
    <string name="efun_pd_reset_save">保存</string>
    <string name="efun_pd_reset_confirm_change">確認修改</string>
    <string name="efun_pd_reset_title_nick">暱稱：</string>
    <string name="efun_pd_reset_title_line">我的LINE：</string>
    <string name="efun_pd_reset_title_sex">性別：</string>
    <string name="efun_pd_reset_title_birthday">生日：</string>
    <string name="efun_pd_reset_title_area">地區：</string>
    <string name="efun_pd_reset_title_detail_adress">詳細地址：</string>
    <string name="efun_pd_setting_subscription">訂閱</string>
    <string name="efun_pd_setting_push">推送設置</string>
    <string name="efun_pd_setting_help">幫助與反饋</string>
    <string name="efun_pd_setting_appraisal">為Efun遊戲平台評分</string>
    <string name="efun_pd_check_update">檢測更新</string>
    <string name="efun_pd_last_version">已是最新版本</string>
    <string name="efun_pd_push_to_friends">推薦給好友</string>
    <string name="efun_pd_register_account">帳號：</string>
    <string name="efun_pd_hint_forget_email">*請填寫注冊帳號所用的Email信箱</string>
    <string name="efun_pd_forget_email">Email信箱:</string>
    <string name="efun_pd_get_password">找回密碼</string>
	<string name="efun_pd_confirm">確認</string>
	<string name="efun_pd_bind_phone_with_call_phone_way_one">方式1</string>
	<string name="efun_pd_bind_phone_with_call_phone_way_two">方式2</string>
	<string name="efun_pd_bind_phone_tips1">點擊撥打以下號碼完成驗證</string>
	<string name="efun_pd_bind_phone_tips2">（台灣地區用戶最佳驗證方式）</string>
	<string name="efun_pd_finish_veri_by_vcode">輸入獲得的驗證碼完成驗證</string>
</resources>