<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/e_ffffff"
    android:orientation="vertical" >

    <com.efun.platform.widget.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.efun.platform.widget.TitleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/e_size_138"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView 
            android:layout_width="@dimen/e_size_126"
            android:layout_height="@dimen/e_size_126"
            android:textSize="@dimen/e_text_size_40"
            android:textColor="@color/e_ffffff"
            android:background="@drawable/efun_pd_oval_blue"
            android:text="@string/efun_pd_bind_phone_with_call_phone_way_one"
            android:gravity="center"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/e_text_size_48"
            android:textColor="@color/e_575757"
            android:layout_marginTop="@dimen/e_size_75"
            android:text="@string/efun_pd_bind_phone_tips1"
            android:gravity="center"/>
         <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/e_text_size_45"
            android:textColor="@color/e_b7b7b7"
            android:layout_marginTop="@dimen/e_size_15"
            android:text="@string/efun_pd_bind_phone_tips2"
            android:gravity="center"/>
         
         <LinearLayout
             android:id="@+id/bind_phone_call_btn" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/e_size_30"
             android:paddingRight="@dimen/e_size_30"
             android:paddingTop="@dimen/e_size_10"
             android:paddingBottom="@dimen/e_size_10"
             android:background="@drawable/efun_pd_cons_50c1e9_bg"
             android:layout_marginTop="@dimen/e_size_64">
             
             <ImageView 
                 android:layout_width="@dimen/e_size_70"
                 android:layout_height="@dimen/e_size_70"
                 android:src="@drawable/efun_pd_bind_account_by_phone_icon"/>
             <TextView
                 android:id="@+id/bind_phone_call_num" 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/e_50c1e9"
                 android:textSize="@dimen/e_text_size_45"
                 android:layout_marginLeft="@dimen/e_size_30"/>
         </LinearLayout>
         
        <TextView 
            android:layout_width="@dimen/e_size_126"
            android:layout_height="@dimen/e_size_126"
            android:textSize="@dimen/e_text_size_40"
            android:textColor="@color/e_ffffff"
            android:background="@drawable/efun_pd_oval_green"
            android:layout_marginTop="@dimen/e_size_138"
            android:text="@string/efun_pd_bind_phone_with_call_phone_way_two"
            android:gravity="center"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/e_text_size_48"
            android:textColor="@color/e_575757"
            android:layout_marginTop="@dimen/e_size_75"
            android:text="@string/efun_pd_finish_veri_by_vcode"
            android:gravity="center"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/e_size_70"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout 
                android:layout_width="@dimen/e_size_480"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <EditText
                android:id="@+id/edit_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/efun_pd_verify_code"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textColorHint="@color/e_bcbcbc"
                android:textColor="@color/e_c4c4c4"
                android:textSize="@dimen/e_text_size_50"
                android:padding="@dimen/e_size_10" />
            <View 
                android:layout_width="match_parent"
                android:layout_height="@dimen/e_size_2"
                android:background="@color/e_bcbcbc"/>
            </LinearLayout>
            
             <TextView
                 android:id="@+id/text_1" 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/efun_pd_cons_00d2c1_bg"
                 android:textColor="@color/e_00d2c1"
                 android:textSize="@dimen/e_text_size_45"
                 android:padding="@dimen/e_size_10"
                 android:text="@string/efun_pd_reset_send_veri_phone"
                 android:layout_marginLeft="@dimen/e_size_40"/>
            
        </LinearLayout>
        
        <TextView
            android:id="@+id/text_2"
            android:layout_width="@dimen/e_size_360"
            android:layout_height="@dimen/e_size_100"
            android:layout_marginTop="@dimen/e_size_100"
            android:background="@drawable/efun_pd_rectangle_00d2c1_bg"
            android:gravity="center"
            android:text="@string/efun_pd_confirm"
            android:textColor="@color/e_ffffff"
            android:textSize="@dimen/e_text_size_48" />
        
    </LinearLayout>

</LinearLayout>